--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /* This is the style of overall webpage body*/ 
 body {
-  background-color: rgb(188, 194, 194);
+  background-color: white;
 }
 
 /* This is the style of image displayed on top of webpage*/ 
