--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,8 @@ h1 {
   text-align: center;
   text-decoration: none;
   font-size: 16px;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2),
+              0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* This is the style of map element available in container of webpage*/
