--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ h1 {
   text-decoration: none;
   margin-bottom: 2rem;
   font-size: 16px;
-
+}
 
 
 /* This is the style of map element available in container of webpage*/
