--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h1 {
 }
 
 
-
+/* This is the style of default button on top of map */
 .button:focus {
   box-shadow: #3c4fe0 0 0 0 1.5px inset, rgba(45, 35, 66, .4) 0 2px 4px, rgba(45, 35, 66, .3) 0 7px 13px -3px, #3c4fe0 0 -3px 0 inset;
 }
