--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,13 @@ h3 {
   margin-bottom: auto;
 }
 
+h4 {
+  color: black;
+  margin-top: auto ;
+  margin-bottom: auto;
+  font-weight: bold;
+}
+
 /* This is the style of container of webpage*/
 .w3-container {
   padding-left: 5%;
